[package]
name = "sisyphus"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"

[profile.dev]
opt-level = 1

# [profile.release]
# debug = true          # equivalent to -C debuginfo=2 now
# lto = false           # optional, for simpler call graphs
# codegen-units = 1     # or more, depending on your needs
